--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to NovaCodez, your trusted partner in navigating the dynamic landscape of technology. At NovaCodez, we specialize in delivering cutting-edge IT solutions tailored to meet your unique needs. Our comprehensive services encompass web and app development, cybersecurity, and advanced hacking technology."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
